--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,1 +1,7 @@
 /* src/pages/Login/Login.css */
+
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
